[package]
name = "CCR"
version = "0.1.0"
edition = "2021"
authors = ["Peter Artyukhov", "artyukhov.p@outlook.com"]

[dependencies]
ggez = "0.9.1"
ncollide2d = "0.33"

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false